UI/css/style.css
/* ... */
@-moz-keyframes blinker {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0.3;
  }
  100% {
    opacity: 1;
  }
}
@-webkit-keyframes blinker {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0.3;
  }
  100% {
    opacity: 1;
  }
}
@keyframes blinker {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0.3;
  }
  100% {
    opacity: 1;
  }
}

#navBar {
  height: 34px;
  align-content: center;
  padding: 0px;
  margin: 0px;
  top: 0;
  left: 0;
  background-color: white;
  position: fixed;
  width: 100%;
}

#blink_caption {
  color: black;
  font-size: 24px;
  float: left;
}
#text {
  opacity: 0.6;
  font-family: "Sofia";
  font-size: 18px;
}

#headerContent {
  margin-left: 20px;
  margin-right: 20px;
}

#headerLogo {
  height: 30px;
  padding-top: 15px;
  padding-bottom: 15px;
  background: white;
  border-radius: 40%;
  float: left;
}

sectionMenu{
  margin-top: 250px;
}

/*Styling for the Navigation Section*/
.navigation > a {
  float: right;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 8px;
  text-decoration: none;
  background-color: #333;
  font-size: 14px;
  height: 18px;
}

#contact,
#menu,
#signOut,
#home,
#cart,
#signOut,
#login {
  border-left-style: solid;
  border-left-color: bisque;
  border-right-style: solid;
  border-right-color: bisque;
  border-width: 1px;
  border-radius: 10px;
}

.navigation a:hover {
  background: #ddd;
  color: black;
  cursor: pointer;
}

.navigation a.active {
  background-color: #ddd;
  color: black;
}

/*Styling for the Footer section*/
footer {
  background-color: bisque;
  text-align: center;
  display: flex;
  flex-direction: column;
}

#footerContent {
  padding-left: 80px;
  padding-right: 80px;
}
#terms {
  float: left;
  color: black;
  font-size: 12px;
  text-align: center;
}

#socialIcons {
  float: right;
  font-size: 0px;
}

#socialIcons a img {
  padding-left: 5px;
  padding-right: 5px;
  margin-top: 7px;
}
#bottom {
  margin: 0px;
  padding: 0px;
  bottom: 0;
  width: 100%;
}
#license {
  background-color: burlywood;
  width: 100%;
  font-family: "Sofia";
  font-size: 14px;
  text-align: center;
  align-content: center;
  bottom: 0;
}

/*Styling for the body background*/
body {
  margin: 0px;
  width: 100%;
  height: 100%;
  padding: 0px;
  background-color: #c79c9c;
}

/*Styling for Buttons and fieldsets*/

.signUp-btn {
  flex: unset;
  margin-bottom: 300px;
}

.newsletterLabel{
  display: flex;
  flex-direction: column;
  text-align: right;
  width: 50%;
  margin-top: -10px;
}
.newsLetterInput{
  display: flex;
  flex-direction: column;
  text-align: right;
  width: 50%;
}
.newsletterLabel > div{
  padding: 8px;
}

.newsLetterBody{
  display: flex;
  flex-direction: row;
text-align: center;
}

.newsLetterBtn{
  color: white;
  padding: 10px;
  border-radius: 10px;
  cursor: pointer;
  width: 80px;
}

#newsLetterPreference {
  width: 150px;
  height: 30px;
  border-radius: 5px;
}

#newsletterTag {
  font-family: sofia;
  font-size: 18px;
  text-shadow: #000;
  margin-left: 10px;
}

#newsLetterEmail{
  width: 200px;
  height: 20px;
  text-align: center;
  border-radius: 5px;
}
/*Styling for the Password Validation Message which pops out when writting password*/
#message {
  display: none;
  background: #f1f1f1;
  color: #000;
  opacity: 0.7;
}

#message h3 {
  text-align: left;
  font-size: 18px;
}

/* Styling to add a green text color and a tick when the requirements are met */
.valid {
  color: green;
}

.valid:before {
  position: relative;
  left: -15px;
  content: "✔";
}

.password {
  content: "✔";
  color: green;
}

/* Styling to add a green text color and an "✖"  when the requirements are not met */
.invalid {
  color: red;
}

.invalid:before {
  position: relative;
  left: -15px;
  content: "✖";
}

#comparePassword {
  padding-top: 5px;
}

/* Styling for the username and password input fields */
#username,
#password,
#confirmPassword,
#email {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  box-sizing: border-box;
  border-radius: 5px;
}

/* Set a style for all buttons */
button {
  background-color: rgba(0, 0, 0, 0.705);
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
  width: 100%;
}

button:hover {
  opacity: 0.8;
}

/* Styles for the cancel button */
.cancle_btn,
#signUpButton{
  width: auto;
  padding: 10px 18px;
  background-color: rgba(49, 15, 15, 0.466);
  border-radius: 10px;
}
#loginBtn,
#submitBtn{
  border-radius: 10px;
  text-align: center;
}

/* Center the image and position the close button */
.img_login {
  text-align: center;
  margin: 24px 0 12px 0;
  position: relative;
}

/*Styling the Fast Food Fast Logo in the login view*/
.logo {
  width: 40%;
  border-radius: 35%;
}

.loginParticulars {
  padding: 16px;
  text-align: left;
}

span.notMember {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 20px;
}

/* Styling the login container background */
.main_container {
  display: none;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  overflow: auto;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.801);
  padding-top: 10px;
}

/* Stying the login container*/
.login {
  background-color: #fefefe;
  margin: auto;
  border: 1px solid #888;
  width: 25%;
  border-radius: 25px;
}

/* Styling for the Close Button (x) */
#close {
  position: absolute;
  right: 25px;
  color: #000;
  font-size: 35px;
  font-weight: bold;
}

/*Styling for the Close button hover Effect*/
#close:hover,
#close:focus {
  color: red;
  cursor: pointer;
}

/* Stying for the Login section Zoom Animation */
.zoom {
  -webkit-animation: animatezoom 0.6s;
  animation: animatezoom 0.6s;
}

@-webkit-keyframes animatezoom {
  from {
    -webkit-transform: scale(0);
  }
  to {
    -webkit-transform: scale(1);
  }
}

@keyframes animatezoom {
  from {
    transform: scale(0);
  }
  to {
    transform: scale(1);
  }
}
.container {
  text-align: center;
  padding: 10px;
  background-color: #f1f1f1;
}
/* ... */

